css-flexbox_profile/css/styles.css
* {
  box-sizing: border-box;
}

body {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  padding: 40px;
  margin: 0 auto;
  max-width: 1200px;
}

.main__title {
  padding: 10px;
  background: #f3f5f9;
}

.profile {
  display: flex;
  flex-direction: column;

}

.profile__image {

  align-self: center;
  border-radius: 50%;
  max-width: 50%;
  height: auto;

}

.tech-stack__list {
  display: flex;
  list-style: none;
  padding-left: 0;
  flex-wrap: wrap;
  justify-content: space-between;
}

.tech-stack__list-item {
  padding: 10px;
  background-color: #252629;
  color: #ffffff;
  border-radius: 10px;
}

